# tidal-top7

./: Makefile  README.md  artists.txt  pyproject.toml
src/tidal_top7/: main.py
